--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
         </section>
         <section class="resumo">
         <h2>Resumo</h2>
-        <div>
+        <div class="reação">
             <div>
                 <img src="./images/icon-reaction.svg" alt="ícone de reação">
                 <span>Reação</span>
             </div>
             <strong>80 / 100</strong>
         </div>
-        <div>
+        <div class="memória">
             <div>
                 <img src="./images/icon-memory.svg" alt="ícone de memória">
                 <span>Memória</span>
             </div>
             <strong>92 / 100</strong>
         </div>
-        <div>
+        <div class="verbal">
             <div>
                 <img src="./images/icon-verbal.svg" alt="ícone verbal">
                 <span>Verbal</span>
             </div>
             <strong>61 / 100</strong>
         </div>
-        <div>
+        <div class="visual">
             <div>
                 <img src="./images/icon-visual.svg" alt="ícone visual">
                 <span>Visual</span>
