--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
                 <img src="./images/icon-reaction.svg" alt="ícone de reação">
                 <span>Reação</span>
             </div>
-            <strong>80 / 100</strong>
+            <strong>80<span>/100</span></strong>
         </div>
         <div class="memória">
             <div>
                 <img src="./images/icon-memory.svg" alt="ícone de memória">
                 <span>Memória</span>
             </div>
-            <strong>92 / 100</strong>
+            <strong>92<span>/100</span></strong>
         </div>
         <div class="verbal">
             <div>
                 <img src="./images/icon-verbal.svg" alt="ícone verbal">
                 <span>Verbal</span>
             </div>
-            <strong>61 / 100</strong>
+            <strong>61<span>/100</span></strong>
         </div>
         <div class="visual">
             <div>
                 <img src="./images/icon-visual.svg" alt="ícone visual">
                 <span>Visual</span>
             </div>
-            <strong>73 / 100</strong>
+            <strong>73<span>/100</span></strong>
         </div>
         <button>Continuar</button>
         </section>
